--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <figure>
           <img src="images/intro-pic.jpg" alt="A beautiful living room." title="Welcome to Exceptional Realty Group">
           <figcaption>345 Carl Street Apt 12, Carrol Rd. Brooklyn, NY - Photo by Denise Richards.</figcaption>
-          
+
       </figure>
       <p>Lorem ipsum dolor sit amet,<br> consectetur adipisicing elit. Quae, perferendis
         nisi nihil debitis aspernatur doloribus quam eveniet quibusdam tempora esse!
@@ -42,7 +42,7 @@
         obcaecati dolores unde eveniet eius debitis perferendis provident porro. Ipsum, placeat.</p>
     </section>
 
-    <section id="promtional">
+    <section id="promotional">
       <figure>
       <video controls>
         <source src="videos/real-estate.mp4" type="video/mp4">
